--- a/week 1/portfolio-project/index.html
+++ b/week 1/portfolio-project/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@1&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -120,6 +121,50 @@
                     your brand in the best of light is only 4 weeks away. Standing by the 
                     Waterfall methodology, I assure a step by step completion of the whole process.
                 </p>
+            </div>
+            <div class="col-lg-4 col-12">
+                <ul>
+                    <li class="py-4 border-bottom border-1 border-secondary">
+                        <a class="nav-link  border-0" data-bs-toggle="collapse" href="#ux-collapse" role="button" aria-expanded="false" aria-controls="ux-collapse">
+                            <h5 class="d-flex justify-content-between align-items-center"><span><span class="me-3">01</span> UX/Wireframing</span><span class="material-symbols-outlined">add</span></h5>
+                        </a>
+                        <div class="collapse" id="ux-collapse">
+                            <div class="card card-body border-0">
+                                Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="py-4 border-bottom border-1 border-secondary">
+                        <a class="nav-link border-0" data-bs-toggle="collapse" href="#design-collapse" role="button" aria-expanded="false" aria-controls="design-collapse">
+                            <h5 class="d-flex justify-content-between align-items-center"><span><span class="me-3">02</span> Web Design</span><span class="material-symbols-outlined">add</span></h5>
+                        </a>
+                        <div class="collapse" id="design-collapse">
+                            <div class="card card-body border-0">
+                                Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="py-4 border-bottom border-1 border-secondary">
+                        <a class="nav-link border-0" data-bs-toggle="collapse" href="#dev-collapse" role="button" aria-expanded="false" aria-controls="dev-collapse">
+                            <h5 class="d-flex justify-content-between align-items-center"><span><span class="me-3">03</span> Web Development</span><span class="material-symbols-outlined">add</span></h5>
+                        </a>
+                        <div class="collapse" id="dev-collapse">
+                            <div class="card card-body  border-0">
+                                Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                            </div>
+                        </div>                        
+                    </li>
+                    <li class="py-4 border-bottom border-1 border-secondary">
+                        <a class="nav-link border-0" data-bs-toggle="collapse" href="#setup-collapse" role="button" aria-expanded="false" aria-controls="setup-collapse">
+                            <h5 class="d-flex justify-content-between align-items-center"><span><span class="me-3">04</span> Analytics Setup/Support</span><span class="material-symbols-outlined">add</span></h5>
+                        </a>
+                        <div class="collapse" id="setup-collapse">
+                            <div class="card card-body border-0">
+                                Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                            </div>
+                        </div>                        
+                    </li>
+                </ul>
             </div>
             <div class="col-lg-6 col-12"></div>
         </div>
