give proper cols to  collapse part

--- a/week 1/portfolio-project/index.html
+++ b/week 1/portfolio-project/index.html
@@ -113,10 +113,10 @@
                 </div>
             </div>
         </div>
-        <div class="row my-5">
-            <div class="col-lg-6 col-12">
+        <div class="row my-5 d-flex justify-content-between">
+            <div class="col-lg-7 col-12">
                 <h2>My way of getting things done</h2>
-                <p>
+                <p style="font-size: 1.4rem;">
                     Fast and transparent, the path to owning a website that will represent 
                     your brand in the best of light is only 4 weeks away. Standing by the 
                     Waterfall methodology, I assure a step by step completion of the whole process.
