put bg img on work portion

--- a/week 1/portfolio-project/index.html
+++ b/week 1/portfolio-project/index.html
@@ -80,7 +80,10 @@
                 <h2>Selected Work</h2>
                 <p style="font-weight: 550;">A piece from my selection of favourites</p>
             </div>
-            <div class="col-12">
+            <div class="col-12 rel-pos">
+                <div class="img-block">
+                    <img id="work-img" src="images/Rectangle.png" alt="rectangle" class="img-fluid">
+                </div>
                 <div class="vstack gap-1">
                     <div class="border-top border-bottom border-1 border-secondary d-flex justify-content-between align-items-center">
                         <div class="my-3">
