--- a/week 1/portfolio-project/index.html
+++ b/week 1/portfolio-project/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navbar navbar-expand mb-5">
+    <div class="navbar navbar-expand mb-5 sticky-top" style="background-color: #EFEFEF;">
         <div class="container-fluid">
             <a href="#" style="font-weight: 500;" class="navbar-brand">AM Studio</a>
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#work">Work</a></li>
                 <li class="nav-item"><a class="nav-link" href="#process">Process</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="row mt-5">
-            <div class="col">
+            <div id="work" class="col">
                 <h2>I can help you with ...</h2>
             </div>
         </div>
@@ -116,7 +116,7 @@
                 </div>
             </div>
         </div>
-        <div class="row my-5 d-flex justify-content-between">
+        <div id="process" class="row my-5 d-flex justify-content-between">
             <div class="col-lg-7 col-12">
                 <h2>My way of getting things done</h2>
                 <p style="font-size: 1.4rem;">
@@ -171,7 +171,7 @@
             </div>
             <div class="col-lg-6 col-12"></div>
         </div>
-        <div class="row my-5 d-flex justify-content-between align-items-end">
+        <div id="contact" class="row my-5 d-flex justify-content-between align-items-end">
             <div class="col-lg-10 col-12">
                 <h2 style="font-size: 4rem;">Let's talk about a project, collaboration or an idea you may have</h2>
             </div>
