--- a/week 2/index.html
+++ b/week 2/index.html
@@ -6,10 +6,13 @@
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <input type="text" placeholder="Add a New Task + Enter">
+        <input type="text" id="input-task" placeholder="Add a New Task + Enter">
         <nav>
             <ul>
                 <li><button>All</button></li>
@@ -21,7 +24,7 @@
         <div class="divider"></div>
         <div class="task-list">
             <ul>
-                <li><input type="checkbox" id="item-1"><label for="item-1">Movie</label></li>
+                
             </ul>
         </div>
     </div>
