--- a/week 2/index.html
+++ b/week 2/index.html
@@ -15,7 +15,7 @@
         <input type="text" id="input-task" placeholder="Add a New Task + Enter">
         <nav>
             <ul>
-                <li><button>All</button></li>
+                <li><button class="active">All</button></li>
                 <li><button>Pending</button></li>
                 <li><button>Completed</button></li>
             </ul>
@@ -24,7 +24,7 @@
         <div class="divider"></div>
         <div class="task-list">
             <ul>
-                
+
             </ul>
         </div>
     </div>
