--- a/week 2/index.html
+++ b/week 2/index.html
@@ -6,13 +6,17 @@
     <title>To-Do List</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/d2f89adc8d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <input type="text" id="input-task" placeholder="Add a New Task + Enter">
+        <div class="input-container">
+            <i style = "color: #a9a9a9;" class="fa-regular fa-pen-to-square"></i>
+            <input type="text" id="input-task" placeholder="Add a New Task + Enter">
+        </div>
         <nav>
             <ul>
                 <li><button class="active">All</button></li>
@@ -24,7 +28,7 @@
         <div class="divider"></div>
         <div class="task-list">
             <ul>
-
+  
             </ul>
         </div>
     </div>
