--- a/week 3/index.html
+++ b/week 3/index.html
@@ -30,7 +30,7 @@
             </p>
         </div>
         <div class="write-box">
-            <input type="text" placeholder="The quick brown fox jumps over the lazy dog...">
+            <textarea placeholder="The quick brown fox jumps over the lazy dog..."></textarea>
         </div>
         <div class="check-box">
             <div class="sub-check">
