added main functionality

--- a/week 3/index.html
+++ b/week 3/index.html
@@ -34,16 +34,16 @@
         </div>
         <div class="check-box">
             <div class="sub-check">
-                <div class="count-box"><p>Characters</p><p>-</p></div>
-                <div class="count-box"><p>Words</p><p>-</p></div>
-                <div class="count-box"><p>Sentences</p><p>-</p></div>
-                <div class="count-box"><p>Paragraphs</p><p>-</p></div>
+                <div class="count-box"><p>Characters</p><p id="char-count">-</p></div>
+                <div class="count-box"><p>Words</p><p id="word-count">-</p></div>
+                <div class="count-box"><p>Sentences</p><p id="sen-count">-</p></div>
+                <div class="count-box"><p>Paragraphs</p><p id="parg-count">-</p></div>
             </div>
             <div class="sub-check">
-                <div class="count-box"><p>Spaces</p><p>-</p></div>
-                <div class="count-box"><p>Letters</p><p>-</p></div>
-                <div class="count-box"><p>Digits</p><p>-</p></div>
-                <div class="count-box"><p>Special Characters</p><p>-</p></div>
+                <div class="count-box"><p>Spaces</p><p id="sp-count">-</p></div>
+                <div class="count-box"><p>Letters</p><p id="lt-count">-</p></div>
+                <div class="count-box"><p>Digits</p><p id="dig-count">-</p></div>
+                <div class="count-box"><p>Special Characters</p><p id="sc-count">-</p></div>
             </div>
         </div>
         <div class="theme-settings">
