--- a/week 3/index.html
+++ b/week 3/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="container">
@@ -47,7 +48,19 @@
             </div>
         </div>
         <div class="theme-settings">
-            <span class="material-symbols-outlined">settings</span>
+            <button><span class="material-symbols-outlined">settings</span></button>
+        </div>
+        <div class="theme-box hidden">
+            <h2>Theme Settings</h2>
+            <div>
+                <div>
+                    <label for="light">Light Mode</label><input type="radio" value="light" id="light" name="theme-set">
+                </div>
+                <div>
+                    <label for="dark">Dark Mode</label><input type="radio" value="dark" id="dark" name="theme-set" checked>
+                </div>
+            </div>
+            <button><span class="material-symbols-outlined">close</span></button>
         </div>
     </div>
 </body>
